# war_card_game

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
shell_scripts/: pre_commit.sh
tests/objects/: test_card.py  test_deck.py  test_player.py
war_game/: pyproject.toml
war_game/shell_scripts/: pre_commit.sh
war_game/war_game/objects/: card.py
wargame/: .pre-commit-config.yaml  main.py  pyproject.toml
wargame/objects/: card.py  constants.py  deck.py  player.py
wargame/shell_scripts/: pre_commit.sh
wargame/tests/objects/: test_card.py
wargame/wargame/objects/: card.py
